Release 5.0.17
--------------

 * Adds packages for Ubuntu 15.10 "Wily", even though Ubuntu 15.10 hasn't been released yet.
 * Fixes the Node.js `PhusionPassenger.on('exit')` event. This event worked if you restart the app or detach an application process, but not if you stop Passenger.


Release 5.0.16
--------------

 * Allows independent configuration of Union Station gateway address, port and certificate. Closes GH-1543.
 * Supports seek() such that body.rewind works when using Rack middleware that uses Zlib::GzipReader (e.g. for compressed requests). Closes GH-1553.
 * [Apache] Improves detection of Apache configuration file problems. Closes GH-1577.
 * [Enterprise] Fixes installation of the Passenger Enterprise Apache module on Debian Testing.
 * Fixes logging of HTTP response code for Union Station. This regression was introduced by Passenger 5. Closes GH-1581. 
 * Adds a new subcommand `passenger-config about support-binaries-dir`.
 * Fixes a regression in the Node.js loader with regard to custom startup files. This bug was introduced in 5.0.14. Closes GH-1557 (again).
 * Fixes a crash when a Ruby application is accessed through a sub-URI and a root virtual host at the same time.


Release 5.0.15
--------------

 * Support SHA256 digests for the Rails asset pipeline, as used by Sprockets 3.x.
 * Support for JRuby 9.0.0.0. Closes GH-1562.
 * Fixes some bugs in Union Station support, which causes some data (such as controller information and exceptions) to not be logged.
 * The old Users Guides have been deprecated in favor of the [Passenger Library](https://www.phusionpassenger.com/library/). The Users Guides now redirect to appropriate sections in the Passenger Library.


Release 5.0.14
--------------

 * [Standalone] Relative path handling has been improved. In previous versions, relative paths were not handled in a consistent manner. Relative paths are now handled consistently according to the following rules:
