@@ -3,6 +3,7 @@ Release 5.0.17
 
  * Adds packages for Ubuntu 15.10 "Wily", even though Ubuntu 15.10 hasn't been released yet.
  * Fixes the Node.js `PhusionPassenger.on('exit')` event. This event worked if you restart the app or detach an application process, but not if you stop Passenger.
+ * Fixes Ruby application loading incompatibilities caused by the use of absolute paths. Closes GH-1596.
 
 
 Release 5.0.16
